[package]
name = "my-azure-page-blob"
version = "0.1.0"
authors = ["Andrey <amigin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_azure_storage = { git = "https://github.com/MyJetTools/my-azure-storage.git" }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
